--- a/m1/w2/d3/grid/assets/css/stile.css
+++ b/m1/w2/d3/grid/assets/css/stile.css
@@ -117,13 +117,16 @@ main {
     box-shadow: 0 3px 3px #444;
     padding: 2em 1em;
     margin-bottom:1.5em ;
+    display: grid;
+    grid-template-areas: "sidebar";
 }
-    @media screen and (min-width:700px) {
+
+@media screen and (min-width:700px) {
         main {
             padding: 2em;
         }
     }
-
+   
 section { 
     background-color: #e3e3e3;
     padding: 2.5em 1em 1em;
@@ -271,12 +274,13 @@ aside h2 {
     text-transform: uppercase;
     margin-bottom: 1em;
 }
-aside div {
+ aside > div {
     background-color: #e3e3e3;
     border: 1px solid #c3c3c3;
     margin-bottom: 1em;
     padding: 1em;
 }
+    
 aside div p:last-child {
     margin-bottom: 0;
     font-size: 0.8em;
@@ -285,13 +289,10 @@ aside div p:last-child {
 
 
 main{
-    grid-template-rows: 2fr 1fr;
     grid-template-columns: 2fr 1fr;
 }
-article{
-    grid-row-start: 1;
-    grid-row-start: 3;
-}
+
+
 
 /* FOOTER */
 footer {
