--- a/m1/w2/d3/grid/assets/css/stile.css
+++ b/m1/w2/d3/grid/assets/css/stile.css
@@ -117,16 +117,13 @@ main {
     box-shadow: 0 3px 3px #444;
     padding: 2em 1em;
     margin-bottom:1.5em ;
-    display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
 }
-
-@media screen and (min-width:700px) {
+    @media screen and (min-width:700px) {
         main {
             padding: 2em;
         }
     }
-   
+
 section { 
     background-color: #e3e3e3;
     padding: 2.5em 1em 1em;
@@ -274,21 +271,17 @@ aside h2 {
     text-transform: uppercase;
     margin-bottom: 1em;
 }
- aside > div {
+aside div {
     background-color: #e3e3e3;
     border: 1px solid #c3c3c3;
     margin-bottom: 1em;
     padding: 1em;
 }
-    
 aside div p:last-child {
     margin-bottom: 0;
     font-size: 0.8em;
     text-align: right;
 }
-
-
-
 
 
 /* FOOTER */
@@ -311,14 +304,31 @@ footer a {
     color: fuchsia;
 }
 
-
-@media screen and (min-width:1200px) {
-    header, main, footer {
-        max-width: 1200px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+@media screen and (min-width:800px) {
+    main { 
+        display: grid;
+        grid-template-areas: 
+          "post correlati"
+          "post newsletter";
+        grid-template-rows: auto 1fr;  
+        grid-template-columns: 60% 1fr;
+        grid-row-gap: 2%;
+        grid-column-gap: 2%;
+        }  
+      article { 
+        grid-area: post;      
+        }
+      section { 
+        grid-area: newsletter; 
+        align-self: start;
+        position: sticky;
+        top: 350px;
+        }
+      aside { 
+        grid-area: correlati; 
+        } 
 }
+
 
 @media print {
     body {
