--- a/m1/w2/d4/start2/frase.css
+++ b/m1/w2/d4/start2/frase.css
@@ -41,15 +41,15 @@ p{
 
 
 span i{
-    position: absolute;
-    display: inline-block;
+    position: relative;
+    display: inline;
     margin-left: 10px;
     animation-iteration-count: infinite;
     animation-duration: 3s;
     color: darkcyan;
 }
 
-.text-animated-one{
+i:nth-of-type(1){
     position: relative;
     animation-name: parola1;
     animation-duration: 10s;
@@ -58,7 +58,7 @@ span i{
     animation-iteration-count: infinite;
     
 }
-.text-animated-two{
+i:nth-of-type(2){
     position: relative;
     animation-name: parola2;
     animation-duration: 10s;
@@ -67,7 +67,7 @@ span i{
     animation-iteration-count: infinite;
 }
 
-.text-animated-three{
+i:nth-of-type(3){
     position: relative;
     animation-name: parola3;
     animation-duration: 10s;
